fixing site map color and album hover in line display + dark mode

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -167,6 +167,12 @@ TABLE.languages TR TD { padding: 7px 20px; }
   border-radius: 10px;
 }
 
+.albumIconLineHover {
+  background: #f98100! important;
+  color: #ffd7ad;
+  transition: 0.5s ease;
+}
+
 .albumIcon {
   height: 80px;
   display: flex;
